--- a/css/style.css
+++ b/css/style.css
@@ -496,7 +496,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* About Us Section
 --------------------------------*/
 #about {
-  background: #fff;
+  background: #f7f7f7;
   padding: 80px 0;
 }
 
@@ -506,12 +506,12 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #about .about-container .background {
   min-height: 300px;
-  background: url(../img/about-img.jpg) center top no-repeat;
+  background: url(../img/about-img.png) center top no-repeat;
   margin-bottom: 10px;
 }
 
 #about .about-container .content {
-  background: #fff;
+  background: #f7f7f7;
 }
 
 #about .about-container .title {
